# hello-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 41bbb0062048_init.py
hello_fastapi/: config.py  main.py
hello_fastapi/api/: router.py
hello_fastapi/api/organization/: __init__.py  department.py
hello_fastapi/crud/organization/: department.py
hello_fastapi/models/: __init__.py  db.py  organization.py
hello_fastapi/schema/organization/: department.py
