[tool.poetry]
name = "hello-fastapi"
version = "0.1.0"
description = ""
authors = ["Administrator <2075218138@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
